--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.23.4",
+    "date-fns": "^2.29.3",
+    "framer-motion": "^7.5.3",
+    "html-react-parser": "^3.0.4",
+    "jotai": "^1.8.5",
     "next": "12.3.1",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-pdf": "^5.7.2",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "eslint": "8.24.0",
